--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Learning Intern</h1>
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">News</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">About</a></li>
+        <li>Home</li>
+        <li>News</li>
+        <li>Contact</li>
+        <li>About</li>
     </ul>
 </body>
 </html>
