Offical Final Day 1

--- a/home.html
+++ b/home.html
@@ -7,6 +7,8 @@
     <title>Learning Intern</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./lib/css/home.css">
+    <script src="./lib/js/classes.js" defer></script>
+   <script src="./lib/js/main.js" defer></script>
 </head>
 <body>
     <div class="header">
@@ -17,6 +19,9 @@
         <li id="contactprop">Contact</li>
         <li id="aboutprop">About</li>
     </ul>
+    <p class="hh">
+        Welcome to the hub of interships!
+    </p>
     </div>
     <p>
         As young adults, some of us have already experienced the frustration and difficulty of scouring the corners of the internet for internship opportunities for high school students. We aim to relieve that burden by creating an app that clarifies all the important information a person would need such as it's location, career field, and more into categories to easily navigate the professional world.
