Almost completed Home

--- a/home.html
+++ b/home.html
@@ -19,10 +19,24 @@
         <li id="contactprop">Contact</li>
         <li id="aboutprop">About</li>
     </ul>
+    <img src="./assets/handshake3.png">
     <p class="hh">
-        Welcome to the hub of interships!
+        Welcome to the hub of interships for students!
     </p>
     </div>
+    <h2>
+        <img class="icon1" src="./assets/We are Icon.png">
+        Who we are
+        <p class="weInfo">
+            We are a group of students who wanted to help others who we felt had a shared problem. Nothing more, nothing less.</p>
+    </h2>
+    
+    <h4>
+
+    </h4>
+    <h5>
+        Mission
+    </h5>
     <p>
         As young adults, some of us have already experienced the frustration and difficulty of scouring the corners of the internet for internship opportunities for high school students. We aim to relieve that burden by creating an app that clarifies all the important information a person would need such as it's location, career field, and more into categories to easily navigate the professional world.
     </p>
