--- a/home.html
+++ b/home.html
@@ -7,15 +7,13 @@
     <title>Learning Intern</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./lib/css/home.css">
-    <script src="./lib/js/classes.js" defer></script>
-   <script src="./lib/js/main.js" defer></script>
 </head>
 <body>
     <div class="header">
     <h1>Learning Intern</h1>
     <ul>
         <li id="homeprop">Home</li>
-        <li id="internprop">Internships</li>
+        <li id="internprop"><a href="./lib/interships.html">Internships</a></li>
         <li id="contactprop">Contact</li>
         <li id="aboutprop">About</li>
     </ul>
