--- a/lib/interships.html
+++ b/lib/interships.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Interships | Learning Intern</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./lib/css/internships.css">
+    <link rel="stylesheet" href="./css/internships.css">
     <script src="./lib/js/classes.js" defer></script>
     <script src="./lib/js/main.js" defer></script>
 </head>
 <body>
     <div class="header">
         <ul>
-            <li id="homeprop">Home</li>
+            <li id="homeprop"><a href="../home.html"> Home </a></li>
             <li id="contactprop">Contact</li>
             <li id="aboutprop">About</li>
         </ul>
