Main.js with checkboxes

--- a/lib/interships.html
+++ b/lib/interships.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <div class="header">
+        <h1>
+            Learning Intern
+        </h1>
         <ul>
             <li id="homeprop"><a href="../home.html"> Home </a></li>
             <li id="contactprop">Contact</li>
@@ -19,6 +22,18 @@
         </ul>
         <button id="Submitprop"> Submit Internships</button>
     </div>
+    <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="checked" id="paidCheck">
+            <label class="form-check-label" for="defaultCheck1">
+              Paid
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="checked" id="unpaidCheck">
+            <label class="form-check-label" for="defaultCheck2">
+              Unpaid
+            </label>
+          </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
