--- a/home.html
+++ b/home.html
@@ -12,7 +12,6 @@
     <div class="header">
     <h1>Learning Intern</h1>
     <ul>
-        <li id="homeprop">Home</li>
         <li id="internprop"><a href="./lib/interships.html">Internships</a></li>
         <li id="contactprop">Contact</li>
         <li id="aboutprop">About</li>
@@ -29,9 +28,10 @@
             <p class="weInfo">
                 We are a group of students who wanted to help others who we felt had a shared problem. Nothing more, nothing less.</p>
         </h2>
-        <h2 class="unknown">
-                Lorem 
-                <p class="unknown2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio eaque quos, vero unde similique voluptatum ut. Molestias odit nemo omnis quidem obcaecati laborum a quibusdam, animi officia aliquid nulla minus.</p>
+        <h2 class="Goals">
+            <img class="mount" src="./assets/mount.png">
+                Our Goals 
+                <p class="mount">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio eaque quos, vero unde similique voluptatum ut. Molestias odit nemo omnis quidem obcaecati laborum a quibusdam, animi officia aliquid nulla minus.</p>
         </h2>
         <h5>
                 Mission
