--- a/lib/interships.html
+++ b/lib/interships.html
@@ -16,7 +16,7 @@
             Learning Intern
         </h1>
         <ul>
-            <li id="homeprop"><a href="../home.html"> Home </a></li>
+            <li id="homeprop"><a href="../home.html" target="_blank"> Home </a></li>
             <li id="contactprop">Contact</li>
             <li id="aboutprop">About</li>
         </ul>
