--- a/lib/interships.html
+++ b/lib/interships.html
@@ -16,12 +16,13 @@
             Learning Intern
         </h1>
         <ul>
-            <li id="homeprop"><a href="../home.html" target="_blank"> Home </a></li>
+            <li id="homeprop"><a href="../index.html" target="_blank"> Home </a></li>
             <li id="contactprop">Contact</li>
             <li id="aboutprop">About</li>
         </ul>
         <button id="Submitprop"> Submit Internships</button>
     </div>
+    <p class="welcome">Here you can search for internships that suit you and even recomend internships and companies for other students! Just click the 'Submit Internships' button. Good luck students!</p>
     <div class="form-check">
             <input class="form-check-input" type="checkbox" value="checked" id="paidCheck">
             <label class="form-check-label" for="defaultCheck1">
@@ -34,6 +35,13 @@
               Unpaid
             </label>
           </div>
+    <div class="filter">
+      <button>Gold Filter</button>
+    </div>
+
+    <div class="intership-grid">
+      <div class="intership"></div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
