Final before added interships

--- a/lib/interships.html
+++ b/lib/interships.html
@@ -23,6 +23,16 @@
         <button id="Submitprop"> Submit Internships</button>
     </div>
     <p class="welcome">Here you can search for internships that suit you and even recomend internships and companies for other students! Just click the 'Submit Internships' button. Good luck students!</p>
+    <div class="topnav">
+        <input type="text" placeholder="Search">
+        <button type="submit">
+            Submit
+         </button>
+      </div>
+    <div class="filter">
+      <button>Gold</button>
+    </div>
+    <button class="normal">Filter</button>
     <div class="form-check">
             <input class="form-check-input" type="checkbox" value="checked" id="paidCheck">
             <label class="form-check-label" for="defaultCheck1">
@@ -35,10 +45,6 @@
               Unpaid
             </label>
           </div>
-    <div class="filter">
-      <button>Gold Filter</button>
-    </div>
-
     <div class="intership-grid">
       <div class="intership"></div>
     </div>
